--- a/index.html
+++ b/index.html
@@ -25,19 +25,28 @@
             <label for="last-name">Last name</label>
             <input id="last-name-input" class="form-control" type="text">
           </div>
-          <div class="form-group">
-            <label for="street">Street</label>
-            <input id="street-input" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="city">City</label>
-            <input id="city-input" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="state">State</label>
-            <input id="state-input" class="form-control" type="text">
+          <div id="address-group">
+            <div class="new-address">
+              <div class="form-group">
+                <label for="street">Street</label>
+                <input class="form-control street-input" type="text">
+              </div>
+              <div class="form-group">
+                <label for="city">City</label>
+                <input class="form-control city-input" type="text">
+              </div>
+              <div class="form-group">
+                <label for="state">State</label>
+                <input class="form-control state-input" type="text">
+              </div>
+              <div class="form-group">
+                <label for="zipCode">Zip Code</label>
+                <input class="form-control zipCode-input" type="text">
+              </div>
+            </div>
           </div>
           <button type="submit" class="btn">Add</button>
+          <span id="new-address-button" class="btn btn-success">Add Address</span>
         </form>
         <h2>Contacts:</h2>
         <ul id="contact-list">
